--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
       <li>22111401_Seongmin1223</li>
       <li>22113654_0000yuyu</li>
       <li>24123456_YUOSS</li>
+      <li>24123456_YUOSS2</li>
+
     </ul>
   </body>
 </html>
